<resources>
    <string name="app_name">RiotAPI</string>
    <string name="txtSummoner">Please Enter a Summoner Name</string>
    <string name="editSummoner">Summoner Name</string>
    <string name="btnSearch">Search</string>
    <string name="txtSummonerName">Summoner Name:</string>
    <string name="txtSummonerID">Summoner ID:</string>
    <string name="txtSummonerLevel">Summoner Level:</string>
    <string name="txtSummonerRank">Summoner Rank:</string>
    <string name="txtLastUpdated">Last Updated:</string>
    <string name="imgSummonerID">Summoner ID</string>
    <string name="txtMenu">Please Select an Option</string>
    <string name="btnLookup">Summoner Lookup</string>
    <string name="btnTopLadder">Solo Queue Ladder</string>
    <string name="btnServerStatus">Server Status</string>
    <string name="btnMatchHistory">Match History</string>
    <string name="btnChampRotation">Free Champions</string>
    <string name="btnSummonerProfile">Summoner Profile</string>
    <string name="txtRegister">Welcome to the Riot API App. Please Register to Continue</string>
    <string name="hintEmail">Enter Email</string>
    <string name="hintPassword">Enter Password</string>
    <string name="btnRegister">Register</string>
    <string name="txtRegLogin">Already Registered? Login here</string>
    <string name="txtLogin">Welcome to the Riot API App. Please Login to continue</string>
    <string name="btnLogin">Login</string>
    <string name="txtLoginReg">Don\'t have an account? Signup here</string>
    <string name="txtNewSummoner">As part of the setup you can enter your summoner name to link your summoner profile to your account</string>
    <string name="skip">Skip</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtSummonerImage">Summoner Image</string>
    <string name="txtRegion">"Region: "</string>
    <string name="txtGameStatus">Game Server Status:</string>
    <string name="txtClientStatus">Client Server Status:</string>
    <string name="txtWebsiteStatus">Website Server Status:</string>
    <string name="txtSelectRegion">Please Select a Region</string>
    <string name="btnLogOut">Log Out</string>
    <string name="txtRank">Rank</string>
    <string name="freeChamp">ChampName</string>
    <string name="txtSelectChamp">Tap on a champion icon to learn more</string>
    <string name="txtBlurb">ChampBlurb</string>
    <string name="txtChampAbilities">ChampAbilities</string>
    <string name="imgViewChampImage">ChampImage</string>
    <string name="txtDuration">Duration:</string>
    <string name="txtMap">Map:</string>
    <string name="txtCreated">Match Created:</string>
    <string name="txtEmpty">Empty</string>
    <string name="txtWiner">Winner:</string>
    <string name="txtWinner">Winner:</string>
    <string name="txtSide">Side:</string>
    <string name="txtChampionName">Champion Name:</string>
    <string name="txtSelectMatch">Please select a match from the list for more details</string>
</resources>
