<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMenu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLookup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLookup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:onClick="goToLookup"
        android:text="@string/btnLookup"
        app:layout_constraintBottom_toTopOf="@+id/buttonTopLadder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonTopLadder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:onClick="goToTop10"
        android:text="@string/btnTopLadder"
        app:layout_constraintBottom_toTopOf="@+id/buttonChampRotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLookup" />

    <Button
        android:id="@+id/buttonChampRotation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:onClick="goToChampRotation"
        android:text="@string/btnChampRotation"
        app:layout_constraintBottom_toTopOf="@+id/buttonServerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTopLadder" />

    <Button
        android:id="@+id/buttonServerStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:onClick="goToServerStatus"
        android:text="@string/btnServerStatus"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChampRotation" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:onClick="goToSummonerProfile"
        android:text="@string/btnSummonerProfile"
        app:layout_constraintBottom_toTopOf="@+id/progressBarMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonServerStatus" />

    <ProgressBar
        android:id="@+id/progressBarMenu"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#009688"
        android:onClick="signOut"
        android:text="@string/btnLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBarMenu" />

</androidx.constraintlayout.widget.ConstraintLayout>