<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ServerActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewSelectRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="86dp"
        android:text="@string/txtSelectRegion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#009688"
        android:entries="@array/spnRegion"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectRegion"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectRegion" />

    <TextView
        android:id="@+id/textViewRegion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/txtRegion"
        app:layout_constraintBottom_toTopOf="@+id/textViewGameServerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectRegion" />

    <TextView
        android:id="@+id/textViewGameServerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/txtGameStatus"
        app:layout_constraintBottom_toTopOf="@+id/textViewClientServerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegion" />

    <TextView
        android:id="@+id/textViewClientServerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtClientStatus"
        app:layout_constraintBottom_toTopOf="@+id/textViewWebsiteServerStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameServerStatus" />

    <TextView
        android:id="@+id/textViewWebsiteServerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="258dp"
        android:text="@string/txtWebsiteStatus"
        app:layout_constraintBottom_toTopOf="@+id/progressBarServer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClientServerStatus" />

    <ProgressBar
        android:id="@+id/progressBarServer"
        style="?android:attr/progressBarStyle"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWebsiteServerStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>